--- a/app/views/editorial/_blocco_slide1.erb
+++ b/app/views/editorial/_blocco_slide1.erb
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="fs-slidenavigator fs-slidenavigatorshutterstock_6228764804">
-        <a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a>
+        <a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a><a href="#" class="fs-slidenavigatoritem"></a>
       </div>
     </div>
   </div>
