set last jquery

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -56,12 +56,11 @@
   <%= stylesheet_link_tag 'style.responsive.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.css', :media => 'all' %>
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
-  <!-- jquery di default  -->
-  <%# javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
-  <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
-  <%# stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
-  <!-- jquery di per il Front End  -->
-  <%= javascript_include_tag "jquery.js" %>
+  <!-- jquery  -->
+  <%# javascript_include_tag "jquery.js" %>
+  <%= javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
+  <%= javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
+  <%= stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
   <%= javascript_include_tag "script.js" %>
   <%= javascript_include_tag "script.responsive.js" %>
   <%# javascript_include_tag "jquery.jcarousel.min.js" %>
