--- a/app/views/editorial/articolo.html.erb
+++ b/app/views/editorial/articolo.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => 'blocco_sidebar2' %>
-<h1 style="display:none">ARTICOLO DETTAGLIO DI <b>UNo SOLO</b> ARTICOLO</h1>
+<h1 style="display:none">ARTICOLO DETTAGLIO DI <b>UNO SOLO</b> ARTICOLO</h1>
 <div class="fs-layout-cell fs-content clearfix">
   <article class="fs-post fs-article">
     <div class="fs-postcontent fs-postcontent-0 clearfix">
@@ -23,4 +23,3 @@
 
 <%= render :partial => 'blocco_sidebar1' %>
 <%#sidebar a destra %>
-
