--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,16 +1,33 @@
-<h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
-  <%= @articolo.titolo %>
-</h4>
- <span style="color:#ffffff;" class="fs-sections">
-  <%= link_to(h(truncate(@articolo.section.top_section.name)), url_for(:controller => 'editorial', :action => "topsezione", :topmenu_key => @articolo.section.top_section.top_menu.key, :topsection_key => @articolo.section.top_section.key, :escape => false))
-  %>
-  <%= @articolo.section.sezione %>
-  </span>
-<br/>
-<span class="fs-postauthoricon">  Autore:<%= h @articolo.author %>
-  </span>
-<br/>
-<div class="fs-layout-cell layout-item-1">
-  <%= @articolo.testo %>
-</div>
-<%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key %>
+<% if articolo %>
+
+  <h4 style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px">
+    <%= @articolo.titolo %>
+  </h4>
+
+  <% if User.current && User.current.logged? && User.current.isfee?(articolo.id) %>
+
+    <span style="color:#ffffff;" class="fs-sections">
+      <%= link_to(h(truncate(@articolo.section.top_section.name)), url_for(:controller => 'editorial', :action => "topsezione", :topmenu_key => @articolo.section.top_section.top_menu.key, :topsection_key => @articolo.section.top_section.key, :escape => false))
+      %>
+      <%= @articolo.section.sezione %>
+    </span>
+    <br/>
+    <span class="fs-postauthoricon">
+      Autore:<%= h @articolo.author %>
+    </span>
+    <br/>
+    <div class="fs-layout-cell layout-item-1">
+      <%= @articolo.testo %>
+    </div>
+    <%= link_to "Ritorna ...", '/editoriale/' + @articolo.section.top_section.top_menu.key + '/'+ @articolo.section.top_section.key %>
+  <% else %>
+    <br/>
+    <p class="nodata"><%= l(:label_no_data) %></p>
+    <br/>
+  <% end %>
+
+<% else %>
+  <br/>
+  <p class="nodata"><%= l(:label_no_data) %></p>
+  <br/>
+<% end %>
