--- a/app/views/account/lost_password.html - Copia.erb
+++ b/app/views/account/lost_password.html - Copia.erb
@@ -1,4 +1,4 @@
-<h2><%=l(:label_password_lost)%></h2>
+<h2><%=l(:label_username_lost)%></h2>
 
 <div class="box">
 <% form_tag({:action=> "lost_password"}, :class => "tabular") do %>
