--- a/app/views/editorial/_blocco_account.erb
+++ b/app/views/editorial/_blocco_account.erb
@@ -1,21 +1,72 @@
 <div class="fs-block clearfix">
+<%#
+loggin (<%= !User.current.nil? % >)<br />
+logged? (<%= User.current.logged? % >)<br />
+%>
+<% if User.current && User.current.logged? %>
+  <div class="fs-blockheader">
+    <h3 class="t"><b><%= get_status_role(User.current) %></b></h3>
+  </div>
+  <div class="fs-blockcontent">
+    <ul>
+    <% if User.current && User.current.canbackend? %>
+      <li>
+        <%= link_to "==Panello di controllo (BE)==", root_path %>
+      </li>
+      <li>
+        <%= link_to l(:label_my_page), :controller => 'my', :action => 'page' %>
+      </li>
+      <li>
+        <%= link_to l(:label_my_account), :controller => 'my', :action => 'account' %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to "==Pagina principale (FE)==", editorial_path %>
+
+      </li>
+      <li>
+        <%= link_to l(:label_my_page), :controller => 'mio_profilo', :action => 'account' %>
+      </li>
+    <% end %>
+    <% if User.current && User.current.sigla_tipo() %>
+      <li>
+        AFFILIATO: <%= link_to h(User.current.sigla_tipo()), asso_path(User.current.sigla_tipo()) %>
+      </li>
+    <% end %>
+    <% if User.current && User.current.organization() %>
+      <li>
+        CROSS ORGANIZATION: <%= link_to h(User.current.organization()), cross_organization_path(User.current.organization()) %>
+      </li>
+    <% end %>
+    <% if User.current && User.current.responsable? && User.current.responsable_of
+      User.current.responsable_of.each do |organismo| %>
+      <li>
+        <%= link_to h(organismo), organismo_path(organismo) %>
+      </li>
+    <% end
+    end %>
+      <li>
+        <%= link_to l(:label_logout), :signout %>
+      </li>
+    </ul>
+  </div>
+<% else %>
   <div class="fs-blockheader">
     <h3 class="t">Accesso Utenti Abbonati</h3>
   </div>
   <div class="fs-blockcontent">
-    <form action="#" method="post" name="login" id="form-login">
+    <% form_tag({:controller => 'account', :action => 'login'}, :method => 'post') do %>
+      <%= back_url_hidden_field_tag %>
       <fieldset class="input" style="border: 0 none;">
         <p id="form-login-username">
-          <label for="modlgn_username">Username</label>
+          <label for="username"><%= l(:field_login) %>:</label>
           <br/>
-          <input id="modlgn_username" type="text" name="username" class="inputbox" alt="username"
-                 size="18"/>
+          <%= text_field_tag 'username', nil, :tabindex => '1', :size => '18', :class_name => "inputbox"  %>
         </p>
         <p id="form-login-password">
-          <label for="modlgn_passwd">Password</label>
+          <label for="password"><%= l(:field_password) %>:</label>
           <br/>
-          <input id="modlgn_passwd" type="password" name="passwd" class="inputbox" size="18"
-                 alt="password"/>
+          <%= password_field_tag 'password', nil, :tabindex => '2', :size => '18', :class_name => "inputbox" %>
         </p>
 
         <p id="form-login-remember">
@@ -26,18 +77,23 @@
         </p>
         <input type="submit" value="Login" name="Submit" class="fs-button"/>
       </fieldset>
-      <ul>
-        <li>
-          <a href="#">Dimenticato la password?</a>
-        </li>
-        <li>
-          <a href="#">Dimenticato la username?</a>
-        </li>
-        <li>
-          <a href="#">Crea un account</a>
-        </li>
-      </ul>
-    </form>
+    <% end %>
+    <%= javascript_tag "$('#username').focus();" %>
+    <ul>
+      <% if Setting.lost_password? %>
+      <li>
+        <%= link_to l(:label_password_lost), :controller => 'account', :action => 'password_recovery' %>
+      </li>
+      <li>
+        <%= link_to l(:label_username_lost), :controller => 'account', :action => 'lost_password' %>
+        <a href="#"></a>
+      </li>
+      <% end %>
+      <li>
+        <%= link_to l(:label_register), :controller => 'account', :action => 'register' %>
+      </li>
+    </ul>
   </div>
+<% end %>
 </div>
 <!-- fine accounts -->
